--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -5,8 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:theme="@style/AppTheme">
-        <activity android:name=".WebViewActivity"></activity>
+        android:theme="@style/AppTheme" >
+        <activity android:name=".WebViewActivity" android:configChanges="orientation|screenSize"></activity>
     </application>
 
 </manifest>
