--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -64,6 +64,7 @@ post_install do |installer|
     end
     target.build_configurations.each do |config|
       config.build_settings['ENABLE_BITCODE'] = 'NO'
+      config.build_settings['SWIFT_VERSION'] = '4.0'
     end
 
   end
