--- a/android/build.gradle
+++ b/android/build.gradle
@@ -38,4 +38,5 @@ android {
 dependencies {
     implementation 'com.android.support:customtabs:27.1.1'
     implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.squareup.okhttp3:mockwebserver:3.11.0'
 }
